--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
       <title>Watch Movies And Series | HealDb</title>
       <meta name="description" content="Watch Movies And Series Online For Free On HealDb , Watch Movies Online Free And Also Watch Netflix Online Free."/>
       <meta name="og:type" content="website"/>
-      <meta name="og:url" content="https://anime.healdb.me"/>
+      <meta name="og:url" content="https://healer-op.github.io/healdb/"/>
       <meta name="og:title" content="Watch Movies And Series | Heal"/>
       <meta name="og:description" content="Watch Movies And Series Online For Free On HealDb , Watch Movies Online Free And Also Watch Netflix Online Free."/>
       <meta name="og:image" content="https://user-images.githubusercontent.com/65026164/135459434-cfd5f64b-841f-405f-8c88-9bc92f600bc4.png"/>
       <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/65026164/135459434-cfd5f64b-841f-405f-8c88-9bc92f600bc4.png"/>
       <meta name="twitter:card" content="summary_large_image"/>
-      <meta name="twitter:url" content="https://anime.healdb.me"/>
+      <meta name="twitter:url" content="https://healer-op.github.io/healdb/"/>
       <meta name="twitter:title" content="Watch Movies And Series | Heal"/>
       <meta name="twitter:description" content="Watch Movies And Series Online For Free On HealDb , Watch Movies Online Free And Also Watch Netflix Online Free."/>
       <meta name="twitter:image" content="https://user-images.githubusercontent.com/65026164/135459434-cfd5f64b-841f-405f-8c88-9bc92f600bc4.png"/>
-      <link rel="canonical" href="https://anime.healdb.me"/>
+      <link rel="canonical" href="https://healer-op.github.io/healdb/"/>
       <meta name="next-head-count" content="16"/>
       <link rel="icon" href="https://user-images.githubusercontent.com/65026164/135459656-2c24ba6a-4044-4048-a7df-d7fdaaaa1a75.png" type="image/gif" sizes="16x16">
       <meta name="theme-color" content="#a216f3">
